--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
-nbproject
-._*
-.~lock.*
-.buildpath
-.DS_Store
-.idea
-.project
-.settings
-composer.lock
-vendor/bin
+# Composer files
+composer.phar
+vendor/
+
+# Local configs
+config/autoload/*local.php
+local.php
+
+# Binary gettext files
+*.mo
+
+# Data
+data/logs/
+data/cache/
+data/sessions/
+data/tmp/
+temp/
+
+*.phar
