Added Doctrine ORM

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "zendframework/zendframework": ">=2.3.2,<3.0.0",
         "zfcampus/zf-apigility": "~1.0",
         "zfcampus/zf-apigility-documentation": "~1.0",
-        "zfcampus/zf-development-mode": "~2.0"
+        "zfcampus/zf-development-mode": "~2.0",
+        "zfcampus/zf-apigility-doctrine": "dev-master",
+        "hounddog/doctrine-data-fixture-module": "0.0.*"
     },
     "require-dev": {
         "zendframework/zftool": "dev-master",
