--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
         "hounddog/doctrine-data-fixture-module": "0.0.*",
         "dms/meetup-api-client": "1.0.x-dev",
         "zf-commons/zfc-user-doctrine-orm": "1.*",
-        "socalnick/scn-social-auth-doctrine-orm": "1.4.*",
-        "fabpot/php-cs-fixer": "1.*"
+        "socalnick/scn-social-auth-doctrine-orm": "1.4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.*",
@@ -54,7 +53,8 @@
         "zfcampus/zf-apigility-admin": "~1.0",
         "zfcampus/zf-apigility-welcome": "~1.0",
         "zfcampus/zf-deploy": "~1.0",
-        "fzaninotto/faker": "dev-master"
+        "fzaninotto/faker": "dev-master",
+        "fabpot/php-cs-fixer": "dev-master"
     },
     "autoload": {
         "classmap": ["module/", "vendor/"]
