--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "hounddog/doctrine-data-fixture-module": "0.0.*",
         "dms/meetup-api-client": "1.0.x-dev",
         "zf-commons/zfc-user-doctrine-orm": "1.*",
-        "socalnick/scn-social-auth-doctrine-orm": "1.4.*"
+        "socalnick/scn-social-auth-doctrine-orm": "1.4.*",
+        "maglnet/magl-markdown": "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.*",
