--- a/public/bower.json
+++ b/public/bower.json
@@ -22,6 +22,7 @@
     "angular-filter": "*",
     "angular-sanitize": "~1.3.3",
     "bootstrap": "~3.3.1",
-    "markdown": "~0.5.0"
+    "markdown": "~0.5.0",
+    "font-awesome": "~4.2.0"
   }
 }
