--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,8 @@
         "zfcampus/zf-apigility-doctrine": "0.2.*",
         "hounddog/doctrine-data-fixture-module": "0.0.*",
         "dms/meetup-api-client": "1.0.x-dev",
-        "zf-commons/zfc-user-doctrine-orm": "1.*",
-        "socalnick/scn-social-auth-doctrine-orm": "1.4.*",
-        "maglnet/magl-markdown": "~1.1"
+        "maglnet/magl-markdown": "~1.1",
+        "stuki/oauth2-simple-client": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.*",
